--- a/index.html
+++ b/index.html
@@ -1,52 +1,54 @@
 <!doctype html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8">
-  <title>積分地獄（オフライン版）</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <title>積分地獄（オフライン/サーバ実行）</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- 最小の素スタイル（後でCSSに差し替え予定） -->
   <style>
-    body { font-family: "Noto Sans JP", sans-serif; margin: 0; background: #fafafa; }
-    header, footer { background: #fff; border-bottom: 1px solid #ddd; padding: 0.75rem 1rem; }
-    footer { border-top: 1px solid #ddd; border-bottom: none; font-size: 0.9rem; color: #666; }
-    main { padding: 1rem; min-height: 70vh; }
-    #body { transition: opacity 0.2s ease-in-out; }
+    body { font-family: "Noto Sans JP", system-ui, -apple-system, sans-serif; margin:0; background:#fafafa; }
+    header, footer { background:#fff; border-bottom:1px solid #ddd; padding:0.75rem 1rem; }
+    footer { border-top:1px solid #ddd; border-bottom:none; font-size:0.9rem; color:#666; }
+    main { padding:1rem; min-height:70vh; }
+    #body { transition: opacity .2s ease-in-out; }
   </style>
 
-  <!-- MathJax（ローカル同梱想定） -->
+  <!-- MathJax 設定（左寄せ） -->
   <script>
     window.MathJax = {
-      tex: { inlineMath: [['\\(','\\)'],['$','$']], displayMath: [['\\[','\\]']] },
-      svg: { fontCache: 'local' }
+      tex: { inlineMath: [['\\(','\\)'],['$','$']], displayMath: [['\\[','\\]'], ['$$','$$']] },
+      svg: { displayAlign: "left", displayIndent: "0em", fontCache: "local" },
+      startup: { typeset: false }
     };
   </script>
-  <script defer src="mathjax/tex-chtml-full.js"></script>
+  <!-- サーバ実行ならCDNでも可。学内配信で安定させるならローカル展開版に差し替え -->
+  <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+  <!-- ローカルに置く場合の例：<script defer src="mathjax/tex-svg.js"></script> -->
 
-  <!-- 後で実装されるロジック読み込み -->
+  <!-- ロジック（ここに最小限だけ実装。後で差し替え可） -->
   <script type="module" src="app.js"></script>
 </head>
 <body>
+  <!-- ▶ ヘッダ（スケルトン維持） -->
   <header>
-    <div style="display:flex;justify-content:space-between;align-items:center;">
-      <div><strong>積分ランダム演習</strong></div>
+    <div style="display:flex;justify-content:space-between;align-items:center;gap:1rem;">
+      <strong>積分ランダム演習</strong>
       <div>
         <select id="modeSelect">
-          <option value="title">タイトル画面</option>
-          <option value="random">ランダム出題</option>
-          <option value="all">全ジャンルランダム</option>
-          <option value="hintOnly">方針だけモード</option>
+          <option value="title">タイトル</option>
+          <option value="learn" selected>学習モード</option>
+          <option value="swipe">スワイプモード</option>
         </select>
       </div>
     </div>
   </header>
 
-  <main id="body">
-    <!-- body_title.html / body_learn.html / body_swipe.html がここに挿入される -->
-  </main>
+  <!-- ▶ ボディ（ここに body_*.html を差し込む） -->
+  <main id="body"></main>
 
+  <!-- ▶ フッタ（スケルトン維持） -->
   <footer>
-    <div>オフライン版｜外部通信なし</div>
+    オフライン対応可（サーバ実行推奨）｜MathJax描画
   </footer>
 </body>
 </html>
