--- a/body_learn.html
+++ b/body_learn.html
@@ -1,32 +1,59 @@
-<section class="card" style="max-width:900px;margin:auto;">
-  <div class="group">
-    <div class="muted">問題</div>
-    <div id="question" class="mjx-container" style="padding:0.5rem 0;"></div>
+<section class="learn-shell" style="display:flex; gap:16px; flex-direction:column; max-width:900px;">
+  <!-- 上部コントロール -->
+  <div class="controls" style="display:flex; flex-wrap:wrap; gap:12px; align-items:end;">
+    <div>
+      <label>出題範囲</label><br/>
+      <select id="presetSelect">
+        <option value="poly">多項式関数編</option>
+        <option value="tri">三角関数編</option>
+        <option value="exp">指数関数編</option>
+        <option value="log">対数関数編</option>
+        <option value="all">全ジャンル</option>
+      </select>
+    </div>
+
+    <div>
+      <button id="btnStart">出題開始</button>
+      <button id="btnReset">成績リセット</button>
+    </div>
   </div>
 
-  <div id="revealButtons" style="display:flex;gap:8px;flex-wrap:wrap;margin-top:1rem;">
-    <button id="btnShowHint">方針を見る</button>
-    <button id="btnShowAnswer">答えを見る</button>
-    <button id="btnShowExplanation">解説を見る</button>
+  <!-- 問題表示 -->
+  <div class="card" style="border:1px solid #ddd; padding:16px; border-radius:10px;">
+    <div style="display:flex;justify-content:space-between;align-items:center; gap:16px;">
+      <h3 id="titleLine" style="margin:0;">問題</h3>
+      <div id="statLine" style="font-size:12px;color:#666;">表示回数: - / 正答: - / 正答率: -%</div>
+    </div>
+    <div id="question" style="margin-top:8px;"></div>
   </div>
 
-  <div id="hintWrap" style="margin-top:1rem;display:none;">
-    <div class="muted">方針</div>
-    <div id="hint"></div>
-  </div>
-
-  <div id="answerWrap" style="margin-top:1rem;display:none;">
-    <div class="muted">答え</div>
-    <div id="answer" class="mjx-container"></div>
-  </div>
-
-  <div id="explanationWrap" style="margin-top:1rem;display:none;">
-    <div class="muted">解説</div>
-    <div id="explanation" class="mjx-container"></div>
-  </div>
-
-  <div id="gradingArea" style="display:flex;gap:1rem;margin-top:1.5rem;">
+  <!-- ボタン群 -->
+  <div style="display:flex; gap:8px; flex-wrap:wrap;">
+    <button id="btnShowHint">方針を表示</button>
+    <button id="btnShowAnswer">答えを表示</button>
+    <button id="btnShowExplanation">解説を表示</button>
+    <button id="btnWrong" style="margin-left:auto;">できない</button>
     <button id="btnCorrect">できた</button>
-    <button id="btnWrong">できない</button>
   </div>
+
+  <!-- 方針 -->
+  <details id="hintWrap" style="display:none;">
+    <summary>方針</summary>
+    <div id="hint" style="padding:8px 0;"></div>
+  </details>
+
+  <!-- 答え -->
+  <details id="answerWrap" style="display:none;">
+    <summary>答え</summary>
+    <div id="answer" style="padding:8px 0;"></div>
+  </details>
+
+  <!-- 解説 -->
+  <details id="explanationWrap" style="display:none;">
+    <summary>解説</summary>
+    <div id="explanation" style="padding:8px 0;"></div>
+  </details>
+
+  <!-- 進行状況 -->
+  <div id="progressInfo" style="font-size:12px; color:#666;"></div>
 </section>
