--- a/index.html
+++ b/index.html
@@ -2,53 +2,131 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
-  <title>積分地獄（オフライン/サーバ実行）</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>積分地獄｜学習モード</title>
 
-  <style>
-    body { font-family: "Noto Sans JP", system-ui, -apple-system, sans-serif; margin:0; background:#fafafa; }
-    header, footer { background:#fff; border-bottom:1px solid #ddd; padding:0.75rem 1rem; }
-    footer { border-top:1px solid #ddd; border-bottom:none; font-size:0.9rem; color:#666; }
-    main { padding:1rem; min-height:70vh; }
-    #body { transition: opacity .2s ease-in-out; }
-  </style>
-
-  <!-- MathJax 設定（左寄せ） -->
+  <!-- MathJax v3: tex-chtml / 左揃え / 自動改行のみ -->
   <script>
     window.MathJax = {
-      tex: { inlineMath: [['\\(','\\)'],['$','$']], displayMath: [['\\[','\\]'], ['$$','$$']] },
-      svg: { displayAlign: "left", displayIndent: "0em", fontCache: "local" },
-      startup: { typeset: false }
+      tex: {
+        inlineMath: [['\\(', '\\)'], ['$', '$']],
+        displayMath: [['\\[','\\]'], ['$$','$$']],
+        processEscapes: true,
+        processEnvironments: true,
+      },
+      chtml: {
+        displayAlign: 'left',
+        linebreaks: { automatic: true },
+        scale: 0.7      // ★ 数値を小さくすると全数式が小さくなる（1.0が標準）
+      },
+      options: {
+        skipHtmlTags: {'[+]': ['code','pre','script','noscript','style','textarea']},
+        renderActions: { addMenu: [] }
+      }
     };
   </script>
-  <!-- サーバ実行ならCDNでも可。学内配信で安定させるならローカル展開版に差し替え -->
-  <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
-  <!-- ローカルに置く場合の例：<script defer src="mathjax/tex-svg.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js" defer></script>
 
-  <!-- ロジック（ここに最小限だけ実装。後で差し替え可） -->
-  <script type="module" src="app.js"></script>
+  <style>
+    :root { --bg:#0b0c10; --card:#151820; --ink:#e7eef7; --muted:#aab4c3; --accent:#3abff8; --ok:#22c55e; --ng:#ef4444; }
+    html,body { margin:0; padding:0; background:var(--bg); color:var(--ink); font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Hiragino Sans","Noto Sans JP",sans-serif; }
+    header { padding:16px 20px; border-bottom:1px solid #202534; display:flex; gap:12px; align-items:center; flex-wrap:wrap; }
+    .pill { background:#0f1320; border:1px solid #22283a; border-radius:999px; padding:6px 12px; color:var(--muted); }
+    .wrap { max-width:980px; margin:0 auto; padding:20px; }
+    .row { display:flex; gap:16px; flex-wrap:wrap; align-items:center; }
+    select, button { background:#0f1320; color:var(--ink); border:1px solid #273049; border-radius:10px; padding:10px 12px; }
+    button.primary { background:linear-gradient(180deg,#1b2740,#141b2c); border:1px solid #2a3b66; cursor:pointer; }
+    button.ghost { background:transparent; border:1px dashed #34415f; cursor:pointer; }
+    button:disabled { opacity:.6; cursor:not-allowed; }
+    .card { background:var(--card); border:1px solid #1e2434; border-radius:16px; padding:18px; }
+    .meta { color:var(--muted); font-size:13px; }
+    .kx { font-size:20px; line-height:1.7; }
+    .controls { display:flex; gap:8px; flex-wrap:wrap; }
+    .tag { font-size:12px; padding:2px 8px; border-radius:999px; border:1px solid #2a3248; color:var(--muted); }
+    .bar { height:10px; background:#101626; border:1px solid #2a3248; border-radius:999px; overflow:hidden; }
+    .bar > span { display:block; height:100%; background:linear-gradient(90deg,#3abff8,#60a5fa); width:0%; }
+    .answer { border-left:3px solid #2a3b66; padding-left:12px; }
+    .hl { color:var(--accent); }
+    .kbd { font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; background:#0c1220; border:1px solid #25304a; padding:2px 6px; border-radius:6px; font-size:12px; color:#bcd1ee;}
+  </style>
 </head>
 <body>
-  <!-- ▶ ヘッダ（スケルトン維持） -->
   <header>
-    <div style="display:flex;justify-content:space-between;align-items:center;gap:1rem;">
-      <strong>積分ランダム演習</strong>
-      <div>
-        <select id="modeSelect">
-          <option value="title">タイトル</option>
-          <option value="learn" selected>学習モード</option>
-          <option value="swipe">スワイプモード</option>
-        </select>
-      </div>
-    </div>
+    <strong>積分地獄</strong>
+    <span class="pill">MathJax: そのまま適用（非加工）</span>
   </header>
 
-  <!-- ▶ ボディ（ここに body_*.html を差し込む） -->
-  <main id="body"></main>
+  <div class="wrap">
+    <div class="card">
+      <div class="row">
+        <div class="controls">
+          <label>出題範囲　
+            <select id="preset">
+              <option value="all">全ジャンル</option>
+              <option value="poly">多項式</option>
+              <option value="trig">三角</option>
+              <option value="exp">指数</option>
+              <option value="log">対数</option>
+            </select>
+          </label>
 
-  <!-- ▶ フッタ（スケルトン維持） -->
-  <footer>
-    オフライン対応可（サーバ実行推奨）｜MathJax描画
-  </footer>
+          <label>モード　
+            <select id="mode">
+              <option value="once">1周して結果表示</option>
+              <option value="weak">正答率が悪いものを優先</option>
+              <option value="srs">SRS（正答率連動）</option>
+              <!-- ▼ 追加 -->
+              <option value="debug">デバッグ（順番固定）</option>
+            </select>
+          </label>
+
+          <button id="btnStart" class="primary">開始</button>
+          <button id="btnReset" class="ghost">成績リセット</button>
+        </div>
+
+        <div class="controls" style="margin-left:auto;">
+          <span class="tag">出題: <span id="statCur">0</span>/<span id="statTotal">0</span></span>
+          <span class="tag">正答率: <span id="statAcc">0%</span></span>
+        </div>
+      </div>
+      <div class="bar" style="margin-top:12px;"><span id="prog"></span></div>
+    </div>
+
+    <div id="viewLearn" class="card" style="display:none;">
+      <div class="meta" id="meta"></div>
+      <div id="qBox" class="kx"></div>
+      <div class="controls" style="margin-top:12px;">
+        <button id="btnShowAns">答えを表示</button>
+        <button id="btnCorrect" class="primary">正解だった</button>
+        <button id="btnWrong" class="ghost">間違えた</button>
+        <button id="btnNext" style="margin-left:auto;">次へ</button>
+      </div>
+      <div id="aWrap" class="answer" style="display:none; margin-top:14px;">
+        <div class="meta">答え</div>
+        <div id="aBox" class="kx"></div>
+      </div>
+      <div id="pWrap" class="card" style="margin-top:14px;">
+        <div class="meta">方針</div>
+        <div id="pBox" class="kx"></div>
+      </div>
+      <div id="eWrap" class="card" style="margin-top:14px;">
+        <div class="meta">解説（非加工でそのまま表示）</div>
+        <div id="eBox" class="kx"></div>
+      </div>
+    </div>
+
+    <div id="viewResult" class="card" style="display:none;">
+      <h2 style="margin:0 0 8px;">結果</h2>
+      <div class="meta" id="resultMeta"></div>
+      <div class="kx" id="resultSummary" style="margin-top:10px;"></div>
+      <div class="controls" style="margin-top:14px;">
+        <button id="btnRetryWrong" class="primary">「前回の間違いのみ」で再挑戦</button>
+        <button id="btnBackHome">ホームに戻る</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- ※ problems_master.js は app.js 側から ES Modules import します -->
+  <script type="module" src="app.js"></script>
 </body>
 </html>
