--- a/body_swipe.html
+++ b/body_swipe.html
@@ -1,15 +1,30 @@
-<section id="swipeContainer" style="min-height:70vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;">
-  <div id="swipeCard" style="background:#fff;border:1px solid #ccc;border-radius:8px;padding:2rem;max-width:600px;box-shadow:0 3px 8px rgba(0,0,0,0.1);">
+<!--
+[仕様メモ / body_swipe.html]
+
+役割:
+- スワイプ操作で学習（将来拡張用）。上スワイプ=方針表示 / 右=できた / 左=できない。
+
+使用ID:
+- #swipeContainer … 画面ラッパ
+- #swipeCard      … 表示カード
+- #swipeQuestion  … 問題の数式（MathJax ターゲット）
+- #swipeHint      … 方針のプレースホルダ（初期非表示想定）
+
+使用クラス:
+- .muted / .mjx-container（表示）
+-->
+<section id="swipeContainer">
+  <div id="swipeCard">
     <div class="muted">問題（スワイプ操作対応）</div>
-    <div id="swipeQuestion" class="mjx-container" style="margin-top:1rem;">
+    <div id="swipeQuestion" class="mjx-container">
       <!-- MathJaxでレンダリング -->
     </div>
-    <div id="swipeHint" style="display:none;margin-top:1.5rem;color:#333;">
+    <div id="swipeHint">
       <strong>方針：</strong>ここに方針が表示されます。
     </div>
   </div>
 
-  <p style="margin-top:1.5rem;color:#666;font-size:0.95rem;">
+  <p>
     上へスワイプで方針表示、右＝できた、左＝できない
   </p>
 </section>
