--- a/index.html
+++ b/index.html
@@ -1,3 +1,28 @@
+<!--
+[仕様メモ / index.html]
+
+目的:
+- 生徒は index.html のみを直接開く。
+- 共通ロジックは index.html 側（MathJax 初期化・ロゴクリックで title へ）。
+- 画面本体は app.js が body_*.html を #app に差し替え表示。
+
+依存:
+- styles.css（全画面の共通スタイル）
+- MathJax v3 / tex-chtml（\[ ... \] を display 数式に）
+
+DOM契約:
+- <a id="appLogo" class="logo"> … ロゴ。クリックでタイトルへ戻る
+- <main id="app" class="wrap"> … ここに body_*.html を差し替え挿入
+
+MathJax 設定（要件）:
+- tex.displayMath: \[ ... \] / $$…$$
+- chtml.linebreaks.automatic = true 相当
+- chtml.scale は CSS 変数 --math-scale と連動（初期 0.90）
+
+変更禁止:
+- #appLogo / #app / MathJax 設定スクリプトの存在
+-->
+
 <!doctype html>
 <html lang="ja">
 <head>
@@ -31,26 +56,75 @@
     };
   </script>
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js" defer></script>
-
-  <style>
-    :root { --bg:#0b0c10; --card:#151820; --ink:#e7eef7; --muted:#aab4c3; --accent:#3abff8; }
-    html,body { margin:0; padding:0; background:var(--bg); color:var(--ink);
-      font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Hiragino Sans","Noto Sans JP",sans-serif; }
-    header { padding:16px 20px; border-bottom:1px solid #202534; display:flex; align-items:center; gap:12px; }
-    .logo { font-weight:700; cursor:pointer; text-decoration:none; color:var(--ink); }
-    .wrap { max-width:980px; margin:0 auto; padding:20px; }
-    .mjx-container { font-size: calc(1em * var(--math-scale)); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <header>
-    <!-- ロゴ（クリックでタイトル画面へ戻る） -->
+  <header class="wrap" style="display:flex;align-items:center;gap:12px;">
     <a id="appLogo" class="logo" href="#">積分地獄</a>
+    <nav class="debug-nav" aria-label="debug-only navigation">
+      <button class="debug-btn" data-body="title">body_title.html</button>
+      <button class="debug-btn" data-body="checker">body_checker.html</button>
+      <button class="debug-btn" data-body="learn">body_learn.html</button>
+      <button class="debug-btn" data-body="swipe">body_swipe.html</button>
+    </nav>
   </header>
 
-  <!-- 各 body_*.html を差し込む -->
+  <!-- 実表示部：body_**.htmlの内容をここに流す -->
   <main id="app" class="wrap"></main>
 
-  <script type="module" src="app.js"></script>
+  <!-- デバッグ専用：ページ遷移だけをハードコーディング -->
+  <script>
+    // bodyファイル名のマップ
+    const BODY_MAP = {
+      title:   './body_title.html',
+      checker: './body_checker.html',
+      learn:   './body_learn.html',
+      swipe:   './body_swipe.html'
+    };
+
+    // 指定ボディを #app に流し込み（MathJax 再typeset込み）
+    async function loadBody(kind) {
+      const url = BODY_MAP[kind];
+      const app = document.getElementById('app');
+      if (!url || !app) return;
+
+      try {
+        const res = await fetch(url, { cache: 'no-store' });
+        if (!res.ok) throw new Error('HTTP ' + res.status);
+        const html = await res.text();
+        app.innerHTML = html;
+
+        // MathJax 再レンダ（存在チェックつき）
+        if (window.MathJax && MathJax.typesetPromise) {
+          await MathJax.typesetPromise([app]);
+        }
+      } catch (err) {
+        app.innerHTML = `
+          <div class="card">
+            <h3 style="margin-top:0;">読み込みエラー</h3>
+            <p class="meta">"${url}" を読み込めませんでした。(${String(err)})</p>
+          </div>`;
+      }
+    }
+
+    // ロゴで title に戻る
+    document.getElementById('appLogo')?.addEventListener('click', (e) => {
+      e.preventDefault();
+      loadBody('title');
+    });
+
+    // デバッグボタン群
+    document.querySelectorAll('.debug-btn').forEach(btn => {
+      btn.addEventListener('click', () => {
+        const kind = btn.getAttribute('data-body');
+        loadBody(kind);
+      });
+    });
+
+    // 初期表示：title
+    loadBody('title');
+  </script>
 </body>
+
 </html>
