div構造などの微変更

--- a/body_checker.html
+++ b/body_checker.html
@@ -26,7 +26,7 @@
   <div class="checker-title">クリアチェッカー</div>
   <div class="card" style="background:#151820; border-radius:12px; padding:16px;">
     <div id="checkerGrid" class="mini-checker"></div>
-    <div class="meta" style="margin-top:10px; display:flex; gap:12px; align-items:center; flex-wrap:wrap;">
+    <div class="meta" style="margin-top:10px; display:flex; gap:12px; align-items:center; flex-wrap:wrap; justify-content: center;">
       <span class="legend l-red"></span> 80%以上
       <span class="legend l-blue"></span> 50%以上
       <span class="legend l-gray"></span> 50%未満
@@ -38,5 +38,6 @@
   <div class="card" style="background:#151820; border-radius:12px; padding:16px;">
     <div class="meta" style="margin-bottom:8px;">単元ごとの一覧（クリックで挑戦）</div>
     <div id="checkerByGenre" class="genre-list"></div>
+    <div id="byGenreRoot"></div>
   </div>
 </section>
