--- a/body_title.html
+++ b/body_title.html
@@ -24,12 +24,22 @@
   <h1 class="app-title">積分地獄</h1>
 
   <div class="title-buttons">
-    <button id="btnStart" class="btn btn-primary">演習開始</button>
-    <button id="btnReset" class="btn btn-secondary">成績リセット</button>
-  </div>
+    <button id="btnRandomOne" class="ghost">ランダムに一問出題</button>
+    <div class="title-buttons-row">
+      <button id="btnStart" class="btn btn-primary">演習開始</button>
+      <button id="btnReset" class="btn btn-secondary">成績リセット</button>
+    </div>
+  </div>  
   
   <div id="titleChecker" class="title-checker" role="button" tabindex="0">
     <div class="checker-title"></div>
     <div id="titleCheckerGrid" class="mini-checker"></div>
   </div>
+</div>
+
+<!-- タイトルやボタン群のすぐ下に追加 -->
+<div class="pdf-links">
+  <a href="./docs/問題編.pdf" download>問題編.pdf</a>
+  <a href="./docs/解答編.pdf" download>解答編.pdf</a>
+  <a href="./docs/解説編.pdf" download>解説編.pdf</a>
 </div>
